# ez-nowcasting

./: .gitignore  README.md  pyproject.toml
config/: oil_stress_components.yml  selected_series.yml
scripts/: run_workflow.ps1
src/: __init__.py
src/config/: __init__.py  project_config.toml  settings.py  yaml_utils.py
src/data_access/: __init__.py  candidate_registry.py  discovery.py  discovery_runner.py  download.py  ingestion.py  pull_eurostat.py
src/evaluation/: __init__.py  backtests.py
src/features/: __init__.py  monthly_features.py  oil_stress.py  targets.py
src/models/: __init__.py  baselines.py
src/notebooks/: README.md
src/transforms/: __init__.py  monthly.py  standardize.py
tests/: test_backtests.py  test_baselines.py  test_eurostat_discovery.py  test_monthly_features.py  test_oil_stress.py  test_pull_eurostat.py  test_settings.py  test_targets.py
